--- a/index.html
+++ b/index.html
@@ -291,8 +291,7 @@
                         </div>
                         <div class="contact-details">
                             <h3>WhatsApp</h3>
-                            <a href="https://wa.me/57TU_NUMERO_AQUI" target="_blank" rel="noopener noreferrer" id="whatsappLink">Contáctanos por WhatsApp</a>
-                            <p class="contact-note">Reemplaza TU_NUMERO_AQUI con tu número (ej: 3001234567)</p>
+                            <a href="https://wa.me/573122343208" target="_blank" rel="noopener noreferrer" id="whatsappLink">+57 312 2343208</a>
                         </div>
                     </div>
 
